--- a/.gitignore
+++ b/.gitignore
@@ -1,4 +1,8 @@
 .gradle
+.settings
+.classpath
+.project
+/bin/
 /build/
 
 # Ignore Gradle GUI config
@@ -12,3 +16,4 @@ gradle-app.setting
 
 # # Work around https://youtrack.jetbrains.com/issue/IDEA-116898
 # gradle/wrapper/gradle-wrapper.properties
+/.nb-gradle/
